--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,174 +1,111 @@
-
-<!--Navigation bar for mobile-->
-<div class="uk-hidden@s">
-
-  <nav class="uk-navbar" uk-navbar="">
-
-    <div class="uk-navbar-center">
-      <a class="uk-navbar-item uk-logo" href="#">Recipy</a>
-    </div>
-
-  </nav>
-</div>
-
-<!--Navigation pour web browsers-->
-<div class="uk-visible@s">
-
-  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" style="background-color: white">
-
-
-
-  <nav class="uk-navbar" uk-navbar style="position: relative;">
-
-    <div class="uk-navbar-left">
-      <a class="uk-navbar-item uk-logo uk-text-small" href="#">Recipy</a>
-    </div>
-
-      <div class="uk-navbar-center">
-
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+  <div class="uk-position-absolute uk-position-top">
+    <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+      <div class="uk-navbar-left uk-visible@m">
         <ul class="uk-navbar-nav">
-          <li class="uk-active"><a href="#" uk-scroll>Accueil</a></li>
+          <li><a href="#" uk-scroll>Accueil</a></li>
           <li><a href="#concept" uk-scroll>Concept</a></li>
-          <li><a href="#joinUs" uk-scroll>Rejoignez Nous</a></li>
+          <li><a href="#join-us" uk-scroll>Rejoignez Nous</a></li>
         </ul>
-
+      </div>
+      <div class="uk-navbar-center uk-visible@m">
+        <a class="uk-navbar-item uk-logo" href="#">Recipy</a>
+      </div>
+      <div class="uk-navbar-right uk-visible@m">
+        <ul class="uk-navbar-nav">
+          <li><a href="#feedback" uk-toggle>Donnez nous votre avis !</a></li>
+        </ul>
+      </div>
+      <div class="uk-navbar-left uk-hidden@m">
+        <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#" uk-toggle="target: #offcanvas-nav"></a>
+      </div>
+      <div class="uk-navbar-right uk-hidden@m">
+        <a class="uk-navbar-item uk-logo" href="#">Recipy</a>
       </div>
     </nav>
   </div>
 </div>
 
-<!--Main image-->
- <div class="uk-section-default main-presentation">
-
-<!--   image-->
-   <div uk-image class="uk-background-norepeat uk-background-center-center uk-background-image@s uk-padding-remove-top">
-
-     <div class="uk-width-1-1">
-       <div class="uk-container">
-         <div class="uk-margin uk-text-center uk-scrollspy-inview uk-animation-slide-top-small">
-           <%= image_tag "food-salad-healthy-lunch (1).jpg", class: 'uk-img' %>
-         </div>
-       </div>
-     </div>
-
-   </div>
-
-   <div class="uk-margin uk-margin-medium"></div>
-
-<!--   texte-->
-   <div class="uk-width-1-1@m uk-first-column">
-     <h2 class="uk-width-xxlarge uk-margin-auto uk-text-center uk-scrollspy-inview uk-animation-slide-top-small">
-       Nous sommes Recipy, nous créeons la révolution culinaire de demain.
-     </h2>
-     <p class="uk-width-xxlarge uk-margin-auto uk-text-center uk-scrollspy-inview uk-animation-slide-top-small">Scrollez et apprenez en plus sur nous.</p>
-   </div>
-
-   <div class="uk-grid-medium uk-flex-middle uk-grid-margin-medium uk-grid uk-grid-stack" uk-grid="">
-     <div class="uk-width-1-1@m uk-first-column">
-       <hr>
-     </div>
-   </div>
-
- </div>
-
-<!--Concept screen-->
-<div class="uk-section uk-section-default" id="concept">
-  <div class="uk-container">
-    <h3>Recipy  le concept</h3>
-
-<!--    concept grid-->
-    <div class="uk-child-width-1-3@s uk-grid-small uk-text-left" uk-grid="masonry: true">
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class=" uk-card-body">
-            Un service simple, accessible et intégré aux outils d'avant, d’aujourd’hui et de demain.
-          </div>
-        </div>
-      </div>
-
-      <!--      Food Waste-->
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class=" uk-card-body">
-            <%= image_tag "waste (1).png", class: 'uk-img' %>
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class=" uk-card-body">
-            Recipy donnera aussi aux novices la possibilité de réaliser des recettes simples et délicieuses avec des produits locaux.
-          </div>
-        </div>
-      </div>
-
-      <!--      Iphone-->
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class=" uk-card-body">
-            <%= image_tag "iphone.png", class: 'uk-img' %>
-          </div>
-        </div>
-      </div>
-
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class="uk-card-body">
-            Recipy permettra d’éviter le gaspillage des aliments restés dans la cuisine du consommateur.
-          </div>
-        </div>
-      </div>
-
-      <!--      Fork and knife-->
-      <div>
-        <div class="uk-card uk-card-default uk-card-small">
-          <div class=" uk-card-body">
-            <%= image_tag "cutlery.png", class: 'uk-img' %>
-          </div>
-        </div>
-      </div>
+<div id="offcanvas-nav" uk-offcanvas="overlay: true">
+    <div class="uk-offcanvas-bar">
+        <button class="uk-offcanvas-close" type="button" uk-close></button>
+        <h3>Navigation</h3>
+        <ul class="uk-list uk-list-divider uk-list-large">
+          <li><a href="#" uk-scroll>Accueil</a></li>
+          <li><a href="#concept" uk-scroll>Concept</a></li>
+          <li><a href="#joinUs" uk-scroll>Rejoignez Nous</a></li>
+          <li><a href="#feedback" uk-toggle>Donnez nous votre avis !</a></li>
+        </ul>
     </div>
+</div>
 
-<!--    Concept text-->
-    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-       <div class="uk-card uk-card-default uk-card-body">Nous, Recipy, voulons “Révolutionner l’alimentation des Français”.
-            <br>Pour ce faire, nous proposons un site web ainsi qu’une application mobile qui va permettre d’éviter le gaspillage des aliments. <br>
+<div id="feedback" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical uk-modal-dark">
+        <button class="uk-modal-close-outside" type="button" uk-close></button>
+        <h2 class="uk-modal-title landing-title">Donnez nous votre avis !</h2>
+        <div class="uk-flex uk-flex-column">
+          <div class="uk-height-medium uk-flex-1 uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light uk-text-center" data-src="<%= asset_path 'landing/producer.jpg' %>" uk-img>
+            <a href="https://goo.gl/forms/4aw43qwppuar54tu1" class="button-feedback" target="blank">En tant que producteur</a>
           </div>
-      </div>
-
-    <div class="uk-child-width-expand@s" uk-grid>
-      <div class="uk-grid-item-match">
-        <div class="uk-card uk-card-default uk-card-body">
-          <h3>Comment ça marche ?</h3>
-          <p>L’utilisateur aura juste besoin de renseigner ce qu’il reste dans son frigo et nous lui fournirons une liste de recettes adaptée et simple à réaliser.</p>
-          <p>Mais nous lui proposons aussi un panel de recettes et lui donnons la possibilité de générer une liste de courses.</p>
+          <div class="uk-height-medium uk-flex-1 uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light uk-text-center" data-src="<%= asset_path 'landing/cooker.jpg' %>" uk-img>
+            <a href="https://goo.gl/forms/QsQLLkDKau2xZmay1" class="button-feedback" target="blank">En tant que cuisinier</a>
+          </div>
         </div>
-      </div>
-
-      <div class="uk-grid-item-match">
-        <div class="uk-card uk-card-default uk-card-body">
-          <%= image_tag "recipeImage.jpg", class: 'uk-img' %>
-        </div>
-      </div>
     </div>
+</div>
 
-    <div class="uk-margin-top uk-margin-medium"></div>
-
-    <div class="uk-card uk-card-default uk-card-body">
-      <p>De plus, nous souhaitons mettre en avant les produits des producteurs locaux. Cela passe par la liste de courses. En effet, lorsque nous allons générer cette liste, nous allons en priorité, rediriger vers ces producteurs locaux.</p>
-      <p>Nous voulons mettre en avant les producteurs locaux, en mettant en avant leurs produits. Car nous voulons privilégier la qualité tout en permettant au consommateur de parcourir le moins de distance possible afin de lui faire gagner du temps.</p>
-      <p>Du côté consommateur, nous voulons lui proposer également un panel très complet pour les recettes. Pour cela, nous voulons mettre en place une recherche poussée permettant de trouver exactement ce que le consommateur voudra.</p>
-
+<div class="cover">
+  <div class="uk-cover-container" uk-height-viewport  uk-parallax="blur: 10">
+    <img src="<%= asset_path 'cover.jpg' %>" alt="cover" uk-cover>
+    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle cover-text-container">
+        <h1>Ensemble gaspillons moins, mangeons mieux.</h1>
+        <p class="uk-width-1-2@l uk-width-1-1@m uk-width-2-4@s uk-padding project-info">
+          Recipy est la première application à proposer des recettes personnalisées en réduisant le gaspillage alimentaire. En effet, Recipy propose à ses utilisateurs de découvrir de nouvelles recettes basées sur leurs goûts, en consommant de manière locale. Enfin, l’application permet à l’utilisateur de ne pas se soucier de sa liste de courses hebdomadaire, car elle directement générée et intégrée dans les outils d’aujourd’hui et de demain.
+        </p>
+        <div class="info uk-flex uk-flex-column uk-flex-middle">
+          <span>Scrollez vers le bas pour en apprendre plus</span>
+          <span class="down-icon bounce" uk-icon="icon: chevron-down; ratio: 2"></span>
+        </div>
     </div>
   </div>
-
 </div>
-<hr>
 
-<!--Formulaire-->
-<div class="uk-section uk-section-default uk-padding-remove-top" id="joinUs">
+<div id="concept">
+  <div class="uk-section uk-section-large uk-section-secondary">
+    <div class="uk-container">
+      <h2 class="landing-title uk-margin">CONCEPT</h2>
+      <p class="uk-text-small">
+        Recipy est votre nouveau compagnon pour la réalisation de tous vos plats au quotidien. Il vous assiste dans la trouvaille de nouveaux plats succulents et dans leur réalisation. Au-delà de tout cela, nous nous engageons à vous apprendre une nouvelle manière de consommer, plus respectueuse pour l’environnement tout en restant dans vos frais. En effet, Recipy vous propose tout au long du parcours en sa compagnie, d’effectuer les achats de vos produits manquants auprès de producteurs locaux partenaires. Recipy est connecté aux technologies d’aujourd’hui et de demain pour vous proposer tous les jours la manières la plus simple de rendre agréable des moments du quotidien : « que va-t-on manger cette semaine ? » ou encore « où ai-je donc mis ma liste de course ? ». Plus d'embarras, Recipy contient de nombreuses fonctionnalités pour faciliter votre vie de cuisinier amateur ou professionnel. Recipy va vous prouver qu’il peut être simple d’éviter le gaspillage et le tout, en mangeant mieux !
+      </p>
+    </div>
+  </div>
+  <div class="uk-section uk-section-large uk-section-default">
+    <div class="uk-container">
+      <h2 class="landing-title uk-margin">UN SERVICE SIMPLE</h2>
+    </div>
+    <div class="uk-child-width-expand@s uk-margin uk-padding" uk-grid>
+        <div class="uk-width-1-3@m uk-text-center">
+          <img data-src="<%= asset_path 'landing/iphone.png' %>" alt="iphone" height="200" width="200" uk-img>
+          <p class="uk-text-lead uk-text-center">Accessible et intégré aux outils d'avant, d’aujourd’hui et de demain.</p>
+        </div>
+        <div class="uk-width-1-3@m uk-text-center">
+          <img data-src="<%= asset_path 'landing/cutlery.png' %>" alt="iphone" height="200" width="200" uk-img>
+          <p class="uk-text-lead uk-text-center">Qui donne aux novices la possibilité de réaliser des recettes simples, délicieuses, le tout avec des produits locaux.</p>
+        </div>
+        <div class="uk-width-1-3@m uk-text-center">
+          <img data-src="<%= asset_path 'landing/waste.png' %>" alt="iphone" height="200" width="200" uk-img>
+          <p class="uk-text-lead uk-text-center">Permettant d’éviter le gaspillage des aliments restés dans la cuisine du consommateur.</p>
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="uk-section uk-section-large uk-section-muted uk-section-secondary" id="join-us">
+  <div class="uk-container uk-margin">
+    <h2 class="landing-title">RECIPY ARRIVE BIENTÔT</h2>
+    <p class="uk-text-saml">Inscrivez vous pour recevoir les informations sur l'évolution du projet.</p>
+  </div>
   <div class="uk-container">
-    <h3>Rejoignez nous!</h3>
 
     <% if flash[:success]  %>
       <div class="uk-alert-success" uk-alert>
@@ -198,50 +135,42 @@
           </div>
         <%= f.button :submit, "Valider" ,class: 'uk-button uk-button-primary' %>
       <% end %>
+
+      <p class="rgpd-small">
+        *RECIPY, responsable du traitement, collecte votre nom, prénom et adresse email pour vous envoyer les actualités concernant RECIPY. Vous bénéficiez d'un droit d’accès, de rectification et d'opposition. Pour plus d'information sur vos droits informatique & Liberté cliquez <a href="#">ici</a>
+      </p>
     </div>
   </div>
 
 
 
 </div>
+<div class="uk-section uk-section-small uk-section-default">
+  <div class="uk-container uk-text-center uk-padding">
+    <h2 class="landing-title uk-margin">ESSAYEZ LA BETA DÈS MAINTENANT</h2>
+    <a href="/beta" class="button-landing">Accéder à la beta</a>
+  </div>
+</div>
 <!--  Footer-->
-<div class="uk-section-default footer" id="footer">
+<div class="uk-section uk-section-small uk-section-muted uk-section-footer">
   <div class="uk-container">
-
-<!--    Recipy-->
-    <div class="uk-margin-top uk-margin-small">
-      <div class="uk-flex-middle uk-grid-margin uk-grid uk-grid-stack" uk-grid="">
-        <div class="uk-width-1-1@m uk-first-column">
-          <div class="uk-margin-small uk-text-center uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class="" style="">
-            <h1 style="color: #FFFFFF;">Recipy</h1>
-          </div>
-        </div>
+    <div class="uk-flex uk-flex-center uk-flex-middle uk-margin">
+      <div class="uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class>
+        <img data-src="<%= asset_path 'landing/logo.png' %>" alt="iphone" height="200" width="200" uk-img>
       </div>
     </div>
-
-<!--    Footer grid-->
-    <div class="uk-flex-middle uk-margin uk-grid" uk-grid="">
-
-      <div class="uk-width-expand@s uk-first-column">
-
-        <h3 class="uk-text-center uk-h4 uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class="" style="">
-          5-9 Rue du Palais Rihour, 59000 Lille, France </h3>
-
-      </div>
-
-      <div class="uk-width-expand@s">
-
-        <h3 class="uk-margin-remove-top uk-text-center uk-h4 uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class="" style="">
-          Made with ❤️ by Recipy Team </h3>
-
-
-      </div>
-      <div class="uk-width-expand@s">
-
-        <h3 class="uk-text-center uk-h4 uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class="" style="">
-          contact@recipy.com</h3>
-      </div>
+  </div>
+  <div class="uk-flex-middle uk-grid uk-text-center" uk-grid="">
+    <div class="uk-width-expand@s uk-first-column">
+      <p class="uk-text-center uk-h4 uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class>5-9 Rue du Palais Rihour<br>59000 Lille<br>France</p>
     </div>
-    <div class="uk-padding-bottom uk-padding-medium"></div>
+    <div class="uk-width-expand@s uk-flex uk-flex-row uk-text-left uk-flex-between">
+      <a href="https://twitter.com/recipyapp" class="uk-flex uk-flex-middle" target="blank"><span uk-icon="icon: twitter"></span>   Twitter</a>
+      <a href="https://www.facebook.com/recipyapp" class="uk-flex uk-flex-middle" target="blank"><span uk-icon="icon: facebook"></span>   Facebook</a>
+      <a href="https://www.instagram.com/recipy_hq" class="uk-flex uk-flex-middle" target="blank"><span uk-icon="icon: instagram"></span>   Instagram</a>
+    </div>
+    <div class="uk-width-expand@s">
+      <a href="mailto:recipyhq@gmail.com" class="uk-text-center uk-h4 uk-scrollspy-inview uk-animation-slide-top-small" uk-scrollspy-class>recipyhq@gmail.com</a>
+    </div>
   </div>
 </div>
