Fix/update recipe (#201)
* feat: add categories + quantity types + quantity equiv* NOT WORKING

* fix: step attribute

* fix: rspec recipe

* feat: quantity equiv. + related table

* feat: add categories + equiv to recipes

* feat: recipe_quantity + link quantity_type

* feat: times + link recipe_ingre to quant

* feat: active_admin base OK + api controller get

* feat: active_admin base OK + api controller get

* fix: ingredients get index api

* fix: delete bad file in images

* fix: migration failed

* fix: migration failed

* fix: undefined method on heroku

* fix: bullet not found in prod

* fix: missing ingredient in admin

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.input :step, label: t("recipe.title.step") %>
     <%= f.label :difficulty, label: t("recipe.title.difficulty") %>
     <%= f.number_field :difficulty, max: 10, class:"uk-input"%>
-    <%= f.input :time, label: t("recipe.title.time") %>
+    <%= f.input :cooking_time, label: t("recipe.title.time") %>
 
   <div class="uk-margin-medium">
     <div class="uk-text-center">
