--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -67,7 +67,7 @@
         </div>
         <div>
           <div class="uk-card uk-card-default uk-card-body">
-            <%= @recipe.time %>
+            <%= @recipe.cooking_time %>
             <strong> minutes </strong>
           </div>
         </div>
