Feat/recipes/user feedback (#212)
* Fix: Search problem with blob image

* Feat: Add score for recipes

* Feat: Add recipy design and fonctionnal for feedback

* Feat: Add feedback

* Add api return for recipes view feedback

* Feat: Add scores_controller api call

* Fix: remove errors

* Fix: Api not API

* Fix: translation

* Fix: Card for preparation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,18 @@
  *= require landing_pages
  *= require_self
  */
+@import url('https://fonts.googleapis.com/css?family=Lobster+Two|Montserrat:700|Quicksand');
+@import './base/variables.scss';
+
+.uk-section-secondary {
+  background-color: $recipy-secondary-color;
+}
+
+.title {
+  color: $recipy-secondary-color;
+  font-family: 'Montserrat', sans-serif;
+}
+
+progress.uk-progress[value]::-webkit-progress-value {
+  background-color: $recipy-primary-color;
+}
